[package]
name = "imxrt1052"
version = "0.1.0"
authors = ["Yurii Rashkovskii <me@yrashk.com>"]
keywords = ["svd2rust"]
repository = "https://github.com/yrashk/imxrt1052"

[dependencies]
bare-metal = "0.1"
cortex-m = "0.4"
vcell = "0.1"
cortex-m-rt = { version = "0.4", optional = true }

[features]
default = ["rt"]
rt = ["cortex-m-rt"]
